--- a/css/responsive.css
+++ b/css/responsive.css
@@ -696,6 +696,10 @@
         padding: 0 30px;
     }
 
+    .world-list {
+        margin-left: 30px;
+    }
+
     .world-item img{
         width: 100px;
         height: 120px;
